2004-09-17  Pekka Enberg <penberg@iki.fi>

	* Release 0.2.17.

2004-09-07  Pekka Enberg <penberg@iki.fi>

	* New README file.
	* Better usage printout.
	* Support for multiple files in the command line.

2004-03-29  Heikki Orsila <shd@modeemi.cs.tut.fi>

	* Fixed Makefile dependencies.

2004-03-28  Pekka Enberg <penberg@iki.fi>

	* Update BUGS, bump up version, and release 0.2.16.

2004-03-28  Alexander Dupuy <dupuy@sysd.com>

	* Fixed a bug in line wrapping code that caused corrupted output.

2004-02-16  Pekka Enberg <penberg@iki.fi>

	* Released 0.2.15.
	* Updated BUGS. 

2004-02-16  Aubin Paul <debian@outlyer.org>

	* Debian packaging.

2004-02-15  Pekka Enberg <penberg@iki.fi>

	* Released 0.2.14.
	* Added a LICENSE file and standard GPL banner to source files.
	* Added processing instruction parsing (see Section 2.6 of XML 1.0
	  specification). Thanks to Rob Austein <sra@hactrn.net> for the bug
	  report.

2004-02-05  Pekka Enberg <penberg@iki.fi>

	* Bump up version number and re-release 0.2.13.
	* Fix for the doctype section parsing fix. Thanks David for testing. 
	* Release 0.2.13
	* Fix DOCTYPE parsing error that caused corruption in output file.
	  Bug reported by <david@dyn-ns.net>.

2003-09-28  Pekka Enberg <penberg@iki.fi>

	* Release 0.2.12
	* Fix empty element indentation. Thanks to Gabriel C Millerd and Mika
	  Viljanen for the bug reports.

2003-09-26  Pekka Enberg <penberg@iki.fi>

	* Release 0.2.11
	* Fix error in empty element tag indentation that caused corruption
	  in files (spotted by Mika Viljanen).
	* Avoid zero-length files. Thanks to Mika Viljanen for spotting this
	  one!

2003-09-18  Pekka Enberg <penberg@iki.fi>

	* Release 0.2.10
	* Code cleanups
	* Follow indent options for empty element tags too. Thanks to Todd
	  Hammer for pointing out the limitation.

2003-08-09  Pekka Enberg <penberg@iki.fi>

	* Release 0.2.9

2003-08-09  Nicola S. Vitale <nivit@libero.it>

	* Parse attributes with character references properly.
