@@ -1,0 +1,3 @@
+<bar>
+    <foo>1 2 3 4 5</foo>
+</bar>
