@@ -1,0 +1,1 @@
+<bar><foo>1 2 3 4 5</foo></bar>
